Bug 117664 - mailmerge is ignoring current printer settings
Summary: mailmerge is ignoring current printer settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.7.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-17 10:58 UTC by Vasily Melenchuk (CIB)
Modified: 2018-05-21 17:18 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Current result (PDF printer) (12.59 KB, application/pdf)
2018-05-17 10:58 UTC, Vasily Melenchuk (CIB)
Details
Expected result (PDF printer) (13.76 KB, application/pdf)
2018-05-17 10:59 UTC, Vasily Melenchuk (CIB)
Details
letter source (10.67 KB, application/vnd.oasis.opendocument.text)
2018-05-17 10:59 UTC, Vasily Melenchuk (CIB)
Details
address list (12.27 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-05-17 11:00 UTC, Vasily Melenchuk (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2018-05-17 10:58:11 UTC
Description:
For letter which has "print automatically inserted blank pages" set, it is not used during printing.

Steps to Reproduce:
1. Open empty writer document
2. Ensure that "print automatically insterted blank pages" setting is off (Tools -> Options -> LibreOffice Writer -> Print -> Print automatically inserted blank pages. Disable it, if it is on.
3. Open letter.odt file
4. Ensure that "Print automatically inserted blank pages" is on (see p.2).
5. Start mail merge wizard (Tools -> Mail Merge wizard…
6. "Use current document", click "Next"
7. "Letter", click "Next"
8. Select as a datasource adressen5.ods and match fields
9. After wizard finish select "Print merged documents" on newly appeared toolbar and print document (I use PDF printer).

Actual Results:  
Printed document contains 5 pages, one page per letter (see result.pdf).

Expected Results:
Printed document contains 9 pages, one page per letter and 4 blank pages in between due to "print automatically inserted blank pages" is set (see expected_result.pdf).


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
Comment 1 Vasily Melenchuk (CIB) 2018-05-17 10:58:42 UTC
Created attachment 142154 [details]
Current result (PDF printer)
Comment 2 Vasily Melenchuk (CIB) 2018-05-17 10:59:05 UTC
Created attachment 142155 [details]
Expected result (PDF printer)
Comment 3 Vasily Melenchuk (CIB) 2018-05-17 10:59:31 UTC
Created attachment 142156 [details]
letter source
Comment 4 Vasily Melenchuk (CIB) 2018-05-17 11:00:47 UTC
Created attachment 142157 [details]
address list
Comment 5 Commit Notification 2018-05-17 11:07:23 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8385e511aa400e9bd99fd0ca1c5bd5d130277b8a

tdf#117664: mailmerge: copy printer settings to new mailmerge document

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.