tdf#117664: mailmerge: copy printer settings to new mailmerge document

Created mailmerge output document was not using current printer settings,
which can be taken not only from settings, but overriden by currently
opened template.

Change-Id: Ic127dcbfbe8f1e80073b06ecb399100344f4c01d